fixed addCourseHelper ISSUE with ENG202